# mii-prototypes

./: .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  README.md  install  lmc.c  makefile
doc/: mii.tex
init/: bash  common  zsh
lmc/: CMakeLists.txt  lmc.c
mii/: CMakeLists.txt  mii.c
share/lmc/init/: bash  common  zsh
src/: analysis.rs  crawl.rs  db.rs  engine.rs  main.rs
usr/share/lmc/init/: bash  zsh
