[package]
name    = "mii"
version = "0.1.0"
authors = ["Justin Stanley <jtst@iastate.edu>"]
edition = "2018"

[dependencies]
clap              = "2.33.0"
dirs              = "1.0.5"
fasthash          = "0.4.0"
is_executable     = "0.1.2"
lazy_static       = "1.3.0"
log               = "0.4"
num_cpus          = "0.2"
pretty_env_logger = "0.3"
rand              = "0.6.5"
regex             = "1.1.6"
rusqlite          = "0.18.0"
walkdir           = "2.2.7"
